# databricks-metadata-tool

./: .env.example  .gitignore  README.md  config.yaml  config.yaml.example  deploy_to_workspace.py  main.py  package.sh  pyproject.toml  pytest.ini  requirements.txt
databricks_metadata_tool/: __init__.py  cli.py  config.yaml  delta_writer.py  models.py  orchestrator.py  scan_exporter.py  volume_writer.py
databricks_metadata_tool/cloud_provider/: account_provider.py  azure_provider.py
databricks_metadata_tool/collectors/: catalog_collector.py  workspace_collector.py
notebooks/: autoloader_ingestion.py  run_collection.py
src/: orchestrator.py  utils.py  volume_writer.py
src/cloud_provider/: account_provider.py  azure_provider.py
src/collectors/: catalog_collector.py  workspace_collector.py
test-setup/: README.md  cleanup_test_tables.py  configure_metastore_storage.py  create_test_tables.py  main.tf  terraform.tfvars.example
tests/: __init__.py  conftest.py  test_catalog_collector.py  test_cli.py  test_config.py  test_integration.py  test_orchestrator.py  test_volume_writer.py
