[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-metadata-tool"
version = "1.0.0"
description = "Multi-cloud Databricks account metadata collection tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Databricks Metadata Tool"}
]
keywords = ["databricks", "metadata", "unity-catalog", "azure", "aws", "gcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "databricks-sdk>=0.20.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
azure = ["azure-identity>=1.12.0", "azure-mgmt-resource>=22.0.0"]
dev = ["pytest", "black", "flake8"]

[project.scripts]
dbmeta = "databricks_metadata_tool.cli:main"

[project.urls]
Homepage = "https://github.com/databricks/metadata-tool"

[tool.setuptools.packages.find]
where = ["."]
include = ["databricks_metadata_tool*"]

[tool.setuptools.package-data]
databricks_metadata_tool = ["*.yaml"]

